add better creation